--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Finnish fiction'
 - !lcsh 'Historical fiction'
 - !lcc 'PH'
+- GITenberg
 title: 'Anna Fleming: Historiallinen romaani'
 url: http://www.gutenberg.org/ebooks/42697
